--- a/index.html
+++ b/index.html
@@ -72,14 +72,13 @@
 
     <!-- Grid Dengan Kotak -->
     <div class="fiturs container mt-5">
-      <h2 class="text-center mb-3">Kamu Akan Mendapatkan Manfaat <br />Berikut Jika Gabung !</h2>
       <div class="row">
         <!-- Card 1 -->
         <div class="col-md-4">
           <div class="card text-center h-100">
             <div class="card-body">
               <i class="fas fa-laptop-code fa-3x mb-3"></i>
-              <h4 class="card-title">lorem</h4>
+              <h4 class="card-title">Visi</h4>
               <p class="card-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero quibusdam voluptatibus officiis aut inventore tempora nostrum explicabo deserunt, incidunt ipsa
                 voluptas aliquam, dolorum molestiae quod qui animi molestias est nesciunt.
@@ -92,7 +91,7 @@
           <div class="card text-center h-100">
             <div class="card-body">
               <i class="fas fa-network-wired fa-3x mb-3"></i>
-              <h4 class="card-title">lorem</h4>
+              <h4 class="card-title">Misi</h4>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, ipsum deserunt magni eligendi quas omnis quo perspiciatis tenetur. Impedit tempora sed veritatis
                 libero quam repellat, corrupti expedita nisi non odio.
@@ -105,7 +104,7 @@
           <div class="card text-center h-100">
             <div class="card-body">
               <i class="fas fa-brain fa-3x mb-3"></i>
-              <h4 class="card-title">lorem</h4>
+              <h4 class="card-title">PPLG VS RPL</h4>
               <p class="card-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda deserunt, unde officia officiis autem fugiat omnis fuga cum voluptatibus, non esse ipsum
                 saepe? Eveniet necessitatibus omnis temporibus doloribus aliquid.
@@ -117,7 +116,10 @@
     </div>
 
     <footer class="mt-2">
-      <div class="footer d-flex justify-content-center p-4">&copy Mahesa Radithya Priady Dibuat Dengan Sepenuh ...</div>
+      <div class="footer d-flex flex-column justify-content-center p-4 text-center">
+        <h6 class="text">&copy Mahesa Radithya Priady Dibuat Dengan Sepenuh Hati</h6>
+        <h5 class="fs-6 opacity-50">V1</h5>
+      </div>
     </footer>
     <script src="assets/packages/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="assets/packages/fontawoseme/js/all.js"></script>
